fixed magnet link; fixed h1 spacing; worked on sticky nav;

--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@ a:active{
   border-left: thick solid hsl(50, 100%, 50%);
   padding: .2em;
 }
-nav{
-  position: sticky;
-  top: 0px;
-}
 #nav-link{
   font-weight: bold;
 }
@@ -59,8 +55,9 @@ hr{
   height: .5em;
 }
 .yellow-card{
-  color: white;
+  box-sizing: border-box;
   padding: .2em;
+  color: white;
   width: 100%;
   background-color: hsl(50, 100%, 50%);
   border-radius: .2em;
